testsuite/tests/rename/should_fail/T20147.stderr

T20147.hs:6:28: error:
    Empty 'do' block
    Suggested fix: Perhaps you intended to use NondecreasingIndentation
